Fixed bug of truncating eigenvector components during sort

--- a/src/main/resources/index.css
+++ b/src/main/resources/index.css
@@ -176,6 +176,40 @@ input[type=range]:-moz-focusring{
 	border: none ;
 }
 
+#e-value {
+	position: absolute ;
+	top: 10px  ;
+	right: 50px ;
+	z-index: 10 ;
+	width: 100px ;
+	color: white ;
+	background-color: transparent ;
+	font-size: 7pt ;	
+	border: none ;
+}
+#e-gap {
+	position: absolute ;
+	top: 10px  ;
+	right: 170px ;
+	z-index: 10 ;
+	width: 100px ;
+	color: white ;
+	background-color: transparent ;
+	font-size: 7pt ;	
+	border: none ;
+}
+#e-norm {
+	position: absolute ;
+	top: 10px  ;
+	right: 290px ;
+	z-index: 10 ;
+	width: 100px ;
+	color: white ;
+	background-color: transparent ;
+	font-size: 7pt ;	
+	border: none ;
+}
+
 #canvas-2d-clus {
 	background-color: black ;
 	position: absolute ;
